--- a/index.html
+++ b/index.html
@@ -16,11 +16,44 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alat Proyek</title>
   </head>
 
   <body>
-    <h1>Hello World</h1>
+    <!-- Awal Navbar -->
+    <div class="navbar-fixed">
+      <nav class="yellow accent-3">
+        <div class="container">
+          <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">PROYEK</a>
+            <a href="#" data-target="mobile-nav" class="sidenav-trigger"
+              ><i class="material-icons">menu</i></a
+            >
+            <ul class="right hide-on-med-and-down">
+              <li><a href="">About Us</a></li>
+              <li><a href="">Clients</a></li>
+              <li><a href="">Services</a></li>
+              <li><a href="">Portfolio</a></li>
+              <li><a href="">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <!-- Akhir Navbar -->
+
+    <!-- Side Nav -->
+    <ul class="sidenav" id="mobile-nav">
+      <li><a href="">About Us</a></li>
+      <li><a href="">Clients</a></li>
+      <li><a href="">Services</a></li>
+      <li><a href="">Portfolio</a></li>
+      <li><a href="">Contact Us</a></li>
+    </ul>
+    <!-- Akhir -->
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
