--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
       media="screen,projection"
     />
 
+    <link rel="stylesheet" href="css/style.css" />
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alat Proyek</title>
+    <title>Moto Esport Indonesia</title>
   </head>
 
   <body>
     <!-- Awal Navbar -->
     <div class="navbar-fixed">
-      <nav class="yellow accent-3">
+      <nav class="grey darken-4">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">PROYEK</a>
+            <a href="#!" class="brand-logo"
+              ><img src="img/logo.png" width="60"
+            /></a>
             <a href="#" data-target="mobile-nav" class="sidenav-trigger"
               ><i class="material-icons">menu</i></a
             >
@@ -51,6 +55,52 @@
       <li><a href="">Contact Us</a></li>
     </ul>
     <!-- Akhir -->
+
+    <!-- Slider -->
+    <div class="slider">
+      <ul class="slides">
+        <li>
+          <img src="img/slider/1.jpg" />
+          <!-- random image -->
+          <div class="caption center-align">
+            <h3>This is our big Tagline!</h3>
+            <h5 class="light grey-text text-lighten-3">
+              Here's our small slogan.
+            </h5>
+          </div>
+        </li>
+        <li>
+          <img src="img/slider/2.png" />
+          <!-- random image -->
+          <div class="caption center-align">
+            <h3>This is our big Tagline!</h3>
+            <h5 class="light grey-text text-lighten-3">
+              Here's our small slogan.
+            </h5>
+          </div>
+        </li>
+        <li>
+          <img src="img/slider/3.png" />
+          <!-- random image -->
+          <div class="caption center-align">
+            <h3>This is our big Tagline!</h3>
+            <h5 class="light grey-text text-lighten-3">
+              Here's our small slogan.
+            </h5>
+          </div>
+        </li>
+        <li>
+          <img src="img/slider/4.png" />
+          <!-- random image -->
+          <div class="caption center-align">
+            <h3>This is our big Tagline!</h3>
+            <h5 class="light grey-text text-lighten-3">
+              Here's our small slogan.
+            </h5>
+          </div>
+        </li>
+      </ul>
+    </div>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
