--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               ><i class="material-icons">menu</i></a
             >
             <ul class="right hide-on-med-and-down">
-              <li><a href="">About Us</a></li>
-              <li><a href="">Clients</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#categories">Categories</a></li>
               <li><a href="">Services</a></li>
               <li><a href="">Portfolio</a></li>
               <li><a href="">Contact Us</a></li>
@@ -48,8 +48,8 @@
 
     <!-- Side Nav -->
     <ul class="sidenav" id="mobile-nav">
-      <li><a href="">About Us</a></li>
-      <li><a href="">Clients</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#categories">Categories</a></li>
       <li><a href="">Services</a></li>
       <li><a href="">Portfolio</a></li>
       <li><a href="">Contact Us</a></li>
@@ -101,6 +101,104 @@
         </li>
       </ul>
     </div>
+
+    <!-- About -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="row">
+          <h3 class="center light white-text">About Us</h3>
+          <hr />
+          <div class="col m10">
+            <h5>Description</h5>
+            <p>
+              Moto Esport Indonesia (MEI) is one of the largest 2-wheel racing
+              game genre esport communities/events in Indonesia, formed in 2017
+              and regularly holding online championship events to produce
+              esports athletes who are able to compete in world class, as
+              evidenced by the existence of a community This is Indonesia. Every
+              year there is always a representative to the MotoGP eSport Global
+              Series Championship.
+            </p>
+            <p>
+              Moto Esport Indonesia Championship terbentuk sejak tahun 2017
+              menjadi peran penting dalam perkembangan atlet-atlet esport motogp
+              Indonesia, dengan adanya kejuaraan ini prestasi yang membanggakan
+              adalah atlet esport motogp Indonesia dari komunitas kami sejak
+              tahun 2018 hingga sekarang selalu berhasil lolos ke World
+              Championship MotoGP eSport Global Series. Oleh karena itu untuk
+              menjaga prestasi ini kami selalu mengadakan event kejuaraan MotoGP
+              eSport Indonesia (Tidak Resmi), yang kami namakan Moto Esport
+              Indonesia Championship
+            </p>
+          </div>
+          <div class="col m2 light">
+            <img src="img/logo.png" width="300px" alt="Logo" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir -->
+
+    <!-- Categories -->
+    <section id="categories" class="categories">
+      <div class="container">
+        <div class="row">
+          <h3 class="center light white-text">Categories</h3>
+          <hr />
+          <div class="col m6 s12 center">
+            <div class="card-panel black">
+              <i class="material-icons light white-text medium"
+                >desktop_windows
+              </i>
+              <h5 class="center white-text">PC</h5>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                porro pariatur possimus? Saepe voluptate est maiores dicta sit
+                exercitationem nulla neque! Iste pariatur dolores accusantium ex
+                saepe distinctio veniam. Quas?
+              </p>
+            </div>
+          </div>
+          <div class="col m6 s12 center">
+            <div class="card-panel black">
+              <i class="material-icons center light white-text medium"
+                >games
+              </i>
+              <h5 class="center light white-text">PlayStation</h5>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                porro pariatur possimus? Saepe voluptate est maiores dicta sit
+                exercitationem nulla neque! Iste pariatur dolores accusantium ex
+                saepe distinctio veniam. Quas?
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir -->
+
+    <!-- Partner -->
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="img/bg.png" alt="" />
+      </div>
+      <div class="container partner">
+        <h3 class="center light white-text">Partners</h3>
+        <div class="row">
+          <div class="col m4 s12 center">
+            <img src="img/logo2.jpg" alt="" />
+          </div>
+          <div class="col m4 s12 center">
+            <img src="img/Rdst.png" alt="" />
+          </div>
+          <div class="col m4 s12 center">
+            <img src="img/logo3.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Akhir -->
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
