--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <ul class="right hide-on-med-and-down">
               <li><a href="#about">About</a></li>
               <li><a href="#categories">Categories</a></li>
-              <li><a href="">Services</a></li>
-              <li><a href="">Portfolio</a></li>
-              <li><a href="">Contact Us</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#partners">Partners</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -50,9 +50,9 @@
     <ul class="sidenav" id="mobile-nav">
       <li><a href="#about">About</a></li>
       <li><a href="#categories">Categories</a></li>
-      <li><a href="">Services</a></li>
-      <li><a href="">Portfolio</a></li>
-      <li><a href="">Contact Us</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#partners">Partners</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
     <!-- Akhir -->
 
@@ -178,26 +178,155 @@
     </section>
     <!-- Akhir -->
 
-    <!-- Partner -->
-    <div class="parallax-container">
-      <div class="parallax">
-        <img src="img/bg.png" alt="" />
-      </div>
-      <div class="container partner">
-        <h3 class="center light white-text">Partners</h3>
+    <!-- Portfolio -->
+    <section id="portfolio" class="portfolio">
+      <div class="container">
+        <h3 class="center light white-text">Portfolio</h3>
+        <hr />
         <div class="row">
-          <div class="col m4 s12 center">
-            <img src="img/logo2.jpg" alt="" />
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
           </div>
-          <div class="col m4 s12 center">
-            <img src="img/Rdst.png" alt="" />
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
           </div>
-          <div class="col m4 s12 center">
-            <img src="img/logo3.jpg" alt="" />
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
+          </div>
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
+          </div>
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
+          </div>
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
+          </div>
+          <div class="col m3 sm12">
+            <img
+              src="img/slider/1.jpg"
+              class="responsive-img materialboxed"
+              alt=""
+            />
           </div>
         </div>
       </div>
-    </div>
+    </section>
+    <!-- Akhir -->
+
+    <!-- Partner -->
+    <section id="partners" class="partners">
+      <div class="parallax-container">
+        <div class="parallax">
+          <img src="img/bg.png" alt="" />
+        </div>
+        <div class="container partner">
+          <h3 class="center light white-text">Partners</h3>
+          <hr />
+          <div class="row">
+            <div class="col m4 s12 center">
+              <img src="img/logo2.jpg" alt="" />
+            </div>
+            <div class="col m4 s12 center">
+              <img src="img/Rdst.png" alt="" />
+            </div>
+            <div class="col m4 s12 center">
+              <img src="img/logo3.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir -->
+
+    <!-- Contact -->
+    <section id="contact" class="contact">
+      <div class="container">
+        <h3 class="center light white-text">Contact</h3>
+        <hr />
+        <div class="row">
+          <div class="col m5 s12">
+            <div class="card-panel black center">
+              <i class="material-icons center light white-text">email </i>
+              <h5>Contact</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                eligendi eaque, ducimus laborum, sunt reprehenderit consectetur
+                eius vero iusto reiciendis debitis quod voluptates placeat modi
+                inventore dolorum sit quam possimus?
+              </p>
+            </div>
+            <ul class="collection with-header black">
+              <li class="collection-header">Our Teams</li>
+              <li class="collection-item">Moto Esport Indonesia</li>
+              <li class="collection-item">Jl. Gajahmada Barat Pekalongan</li>
+              <li class="collection-item">West Java, Indonesian</li>
+            </ul>
+          </div>
+          <div class="col m7 s12">
+            <form>
+              <div class="card-panel black">
+                <h5>Please fill out this form</h5>
+                <div class="input-field">
+                  <input type="text" name="name" id="name" />
+                  <label for="name">Name</label>
+                </div>
+                <div class="input-field">
+                  <input type="email" name="email" id="email" />
+                  <label for="email">Email</label>
+                </div>
+                <div class="input-field">
+                  <input type="tel" name="nohp" id="nohp" />
+                  <label for="nohp">Phone Number</label>
+                </div>
+                <div class="input-field">
+                  <textarea
+                    name="message"
+                    class="materialize-textarea"
+                    id="message"
+                  ></textarea>
+                  <label for="message">Message</label>
+                </div>
+                <button type="submit" class="btn grey">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Akhir -->
 
     <!--JavaScript at end of body for optimized loading-->
