--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <title>Moto Esport Indonesia</title>
   </head>
 
-  <body>
+  <body id="home" class="scrollspy">
     <!-- Awal Navbar -->
     <div class="navbar-fixed">
       <nav class="grey darken-4">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"
+            <a href="#home" class="brand-logo"
               ><img src="img/logo.png" width="60"
             /></a>
             <a href="#" data-target="mobile-nav" class="sidenav-trigger"
@@ -103,7 +103,7 @@
     </div>
 
     <!-- About -->
-    <section id="about" class="about">
+    <section id="about" class="about scrollspy">
       <div class="container">
         <div class="row">
           <h3 class="center light white-text">About Us</h3>
@@ -140,7 +140,7 @@
     <!-- Akhir -->
 
     <!-- Categories -->
-    <section id="categories" class="categories">
+    <section id="categories" class="categories scrollspy">
       <div class="container">
         <div class="row">
           <h3 class="center light white-text">Categories</h3>
@@ -179,7 +179,7 @@
     <!-- Akhir -->
 
     <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio scrollspy">
       <div class="container">
         <h3 class="center light white-text">Portfolio</h3>
         <hr />
@@ -248,7 +248,7 @@
     <!-- Akhir -->
 
     <!-- Partner -->
-    <section id="partners" class="partners">
+    <section id="partners" class="partners scrollspy">
       <div class="parallax-container">
         <div class="parallax">
           <img src="img/bg.png" alt="" />
@@ -273,7 +273,7 @@
     <!-- Akhir -->
 
     <!-- Contact -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact scrollspy">
       <div class="container">
         <h3 class="center light white-text">Contact</h3>
         <hr />
@@ -327,6 +327,12 @@
         </div>
       </div>
     </section>
+    <!-- Akhir -->
+
+    <!-- Footer -->
+    <footer class="grey darken-4 white-text center">
+      <p class="flow-text">© 2023 Moto Esport Indonesia</p>
+    </footer>
     <!-- Akhir -->
 
     <!--JavaScript at end of body for optimized loading-->
