--- a/index.html
+++ b/index.html
@@ -186,60 +186,60 @@
         <div class="row">
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/1.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 1"
             />
           </div>
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/2.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 2"
             />
           </div>
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/3.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 3"
             />
           </div>
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/4.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 4"
             />
           </div>
         </div>
         <div class="row">
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/5.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 5"
             />
           </div>
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/6.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 6"
             />
           </div>
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/7.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 7"
             />
           </div>
           <div class="col m3 sm12">
             <img
-              src="img/slider/1.jpg"
+              src="img/portfolio/8.png"
               class="responsive-img materialboxed"
-              alt=""
+              alt="Portfolio 8"
             />
           </div>
         </div>
